Revision history for Perl extension App::Followme

{{$NEXT}}

0.97 2014-02-04T00:00:20Z
    - Replaced templating code and reorganized classes
    
0.96 2014-01-17T00:13:48Z
    - Get title from body and create summary in App::Followme::CreateNews

0.95 2014-01-01T14:31:16Z
    - Changes to make filename handling OS independent

0.94 2013-12-26T00:54:19Z
    - Text files are now converted to html by Markdown
    - Compute title from header where possible, compute summary
    - Fixed some OS dependencies

0.93 2013-12-22T19:54:25Z
    - Rewritten as a set of classes derived from App::Followme::Everyfile
    
0.92 2013-11-07T23:55:46Z
    - Replaced rm -rf with rmtree for os independence
    
0.91 2013-11-01T23:02:43Z
    - Rewrote build_url

0.90 2013-10-28T22:22:09Z
    - Rewritten
    
0.89 2013-09-17T23:33:43Z
    - Fixed error in template creation in site_update

0.88 2013-09-14T16:05:58Z
    - Moved modification date reset into update_site, where it needs to be

0.87 2013-09-13T23:54:08Z
    - Set modification date of existing file back to previous valye

0.86 2013-09-12T23:53:41Z
    - Fixed code assuming directory separator is slash
    
0.85 2013-09-10T23:30:29Z
    - Better OS Independent tests

0.84 2013-09-08T19:20:54Z
    - Fix for bug in all_indexes: abs2rel called with undef argument
    
0.83 2013-09-08T00:15:00Z
    - OS independent filename handling
    
0.82 2013-09-05T22:16:59Z
    - Added make_relative and absolute_url config option
    
0.81 2013-09-02T22:26:59Z
    - Do not delete leading digits from title if title is all digits
    
0.80 2013-08-29T22:50:14Z
    - Increased sleep times between creating files for tests
    
0.79 2013-08-26T22:16:58Z
    - Removed compile test

0.78 2013-08-17T20:28:34Z
    - Changed begin/end comments to section/endsection
    
0.77 2013-08-17T15:19:16Z
    - fixed time zone depndent test
    - added new blocks to templates

0.76 2013-08-16T22:23:24Z
    - feature complete release