@@ -9,7 +9,7 @@ use lib '..';
 use base qw(App::Followme::EveryFile);
 
 
-our $VERSION = "0.97";
+our $VERSION = "0.98";
 
 #----------------------------------------------------------------------
 # Read the default parameter values
